--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,12 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
+management.endpoints.web.exposure.include=prometheus,info,metrics,health
+springdoc.paths-to-match=/api/v1/auth/**,/api/v1/**,
+springdoc.swagger-ui.use-root-path=true
+#security.jwt.token.secret-key=53cr37
+#security.jwt.token.expire-length=3600000
+management.endpoints.web.cors.allowed-origin-patterns="http://localhost:8082","http://localhost:3000","http://localhost:8080"
+cors.originPatterns=http://localhost:8082,http://localhost:3000,http://localhost:8080
