--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.h2.console.enabled=true
 management.endpoints.web.exposure.include=prometheus,info,metrics,health
 springdoc.paths-to-match=/api/v1/auth/**,/api/v1/**,
 springdoc.swagger-ui.use-root-path=true
+server.port=8081
 #security.jwt.token.secret-key=53cr37
 #security.jwt.token.expire-length=3600000
-management.endpoints.web.cors.allowed-origin-patterns="http://localhost:8082","http://localhost:3000","http://localhost:8080"
-cors.originPatterns=http://localhost:8082,http://localhost:3000,http://localhost:8080
+management.endpoints.web.cors.allowed-origin-patterns="http://localhost:8082","http://localhost:3000","http://localhost:8081"
+##cors.originPatterns=http://localhost:8082,http://localhost:3000,http://localhost:8080
