--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-spring</artifactId>
-        <version>7.0.0</version>
+        <version>7.11.1</version>
         <scope>test</scope>
     </dependency>
     <dependency>
@@ -184,6 +184,12 @@
             <artifactId>cucumber-junit</artifactId>
             <version>7.11.1</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>7.11.1</version>
         </dependency>
 
         <dependency>
@@ -226,11 +232,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
-                <configuration>
-                    <includes>
-                        <include>**/FunctionalTest*.java</include>
-                    </includes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
