--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,14 @@ target/
 .settings
 .springBeans
 .sts4-cache
+.env
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+/data
 
 ### NetBeans ###
 /nbproject/private/
