--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,10 +32,10 @@ services:
       - '8080:8080'
     environment:
       SPRING_DATA_SOURCE: com.mysql.cj.jdbc.Driver
-      MYSQL_DATABASE: 'prometheus'
-      MYSQL_USER: 'root'
-      MYSQL_ROOT_PASSWORD: 'mypass'
-      DATABASE_URL: jdbc:mysql://mindswap-mysql:3306/mastering_db_2022
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      DATABASE_URL: ${DB_HOST}
       SERVER_PORT: '8080'
       HIBERNATE_DDL_AUTO: 'none'
       SPRING_PROFILES_ACTIVE: 'docker'
@@ -53,8 +53,8 @@ services:
       timeout: 1s
       retries: 10
     environment:
-      MYSQL_ROOT_PASSWORD: 'mypass'
-      MYSQL_DATABASE: 'prometheus'
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
     volumes:
       - mysql-data:/var/lib/mysql
     restart: always
