Customer entities build with success.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ target/
 *.iml
 *.ipr
 /data
+/src/main/resources/db
+/src/main/resources/application.properties
 
 ### NetBeans ###
 /nbproject/private/
