--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:/src/main/resources/db/migration
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+
+
 management.endpoints.web.exposure.include=prometheus,info,metrics,health
 springdoc.paths-to-match=/api/v1/auth/**,/api/v1/**,
 springdoc.swagger-ui.use-root-path=true
