--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-spring.datasource.url=jdbc:h2:file:/src/main/resources/db/migration
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
-# Hibernate settings
-spring.jpa.hibernate.ddl-auto=update
+## Hibernate settings
+#spring.jpa.hibernate.ddl-auto=update
+#flyway.locations=classpath:resources/db/migration
+##flyway.enabled=true
+##flyway.url=jdbc:h2:file:/src/main/resources/db/migration
+##flyway.user=sa
+##flyway.password=password
+
 
 
 management.endpoints.web.exposure.include=prometheus,info,metrics,health
