product Dto UI Not Done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 ## Hibernate settings
 #spring.jpa.hibernate.ddl-auto=update
 #flyway.locations=classpath:resources/db/migration
@@ -12,9 +13,9 @@ spring.h2.console.enabled=true
 ##flyway.url=jdbc:h2:file:/src/main/resources/db/migration
 ##flyway.user=sa
 ##flyway.password=password
-
-
-
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 management.endpoints.web.exposure.include=prometheus,info,metrics,health
 springdoc.paths-to-match=/api/v1/auth/**,/api/v1/**,
 springdoc.swagger-ui.use-root-path=true
