--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,10 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.initialization-mode=always
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+org.dbunit.database.IMetadataHandler.implClassName=org.dbunit.ext.mysql.MySqlMetadataHandler
 ## Hibernate settings
 #spring.jpa.hibernate.ddl-auto=update
 #flyway.locations=classpath:resources/db/migration
