--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>startup</description>
     <properties>
         <java.version>11</java.version>
+        <sonarqube.version>3.10.0.2594</sonarqube.version>
     </properties>
 
     <dependencies>
@@ -105,12 +106,20 @@
             <version>1.3.0</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>${sonarqube.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>8.5.12</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
+
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
@@ -151,6 +160,11 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonarqube.version}</version>
             </plugin>
         </plugins>
     </build>
