--- a/.github/workflows/maven-deploy-application.yml
+++ b/.github/workflows/maven-deploy-application.yml
@@ -1,7 +1,10 @@
-name: Java CI 2023
+name: Java CI 2024
 
 on:
   pull_request:
+    branches:
+      - main
+  push:
     branches:
       - main
 
@@ -21,5 +24,25 @@ jobs:
           distribution: 'adopt'
           architecture: x64
 
-      - name: Build with maven
+      - name: Build with Maven
         run: mvn clean install
+
+  deploy-on-push:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: read
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17 for x64
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          architecture: x64
+
+      - name: Build with Maven
+        run: mvn clean install
+
+      # Add your deployment steps here, e.g., deploying to a server or a cloud platform
