create security profile

--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <!-- Thymeleaf -->
         <dependency>
@@ -111,16 +111,6 @@
             <artifactId>jackson-mapper-lgpl</artifactId>
             <version>1.9.13</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.database-rider</groupId>-->
-        <!--            <artifactId>rider-core</artifactId>-->
-        <!--            <version>1.2.10</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.database-rider</groupId>-->
-        <!--            <artifactId>rider-junit5</artifactId>-->
-        <!--            <version>1.2.10</version>-->
-        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
@@ -189,7 +179,6 @@
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
