--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
     hibernate:
       ddl-auto: none
       format_sql: true
+      show-sql: true
+    database: postgresql
+
 
 
     hikari:
