--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
+        <!--        </dependency>-->
+
         <!-- Thymeleaf -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.24</version> <!-- Replace with the latest version -->
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -65,11 +77,11 @@
             <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.dbunit</groupId>-->
-<!--            <artifactId>dbunit</artifactId>-->
-<!--            <version>2.5.4</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.dbunit</groupId>-->
+        <!--            <artifactId>dbunit</artifactId>-->
+        <!--            <version>2.5.4</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.github.database-rider</groupId>
@@ -91,16 +103,16 @@
             <artifactId>jackson-mapper-lgpl</artifactId>
             <version>1.9.13</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.github.database-rider</groupId>-->
-<!--            <artifactId>rider-core</artifactId>-->
-<!--            <version>1.2.10</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.github.database-rider</groupId>-->
-<!--            <artifactId>rider-junit5</artifactId>-->
-<!--            <version>1.2.10</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.database-rider</groupId>-->
+        <!--            <artifactId>rider-core</artifactId>-->
+        <!--            <version>1.2.10</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.database-rider</groupId>-->
+        <!--            <artifactId>rider-junit5</artifactId>-->
+        <!--            <version>1.2.10</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
