1-update cucumber test. 2-create few's test integration for customers

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ target/
 /data
 /src/main/resources/application.properties
 /src/test/java/code/vanilson/startup/config
+/src/test/resources/config/application-test.yml
 /.env
 
 ### NetBeans ###
