--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ management:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/marketplace_api
-    username: "${POSTGRES_USERNAME}"
-    password: "${POSTGRES_PASSWORD}"
+    username: ${POSTGRES_USERNAME}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
