--- a/src/test/resources/config/application-test.yml
+++ b/src/test/resources/config/application-test.yml
@@ -7,9 +7,10 @@ management:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/marketplace_api
-    username: "${POSTGRES_USERNAME}"
-    password: "${POSTGRES_PASSWORD}"
+    username: postgres
+    password: password
     driver-class-name: org.postgresql.Driver
+
 
   jpa:
     properties:
@@ -20,8 +21,7 @@ spring:
       format_sql: true
       show-sql: true
     database: postgresql
-#  profiles:
-#    active: test
+
 
 server:
   port: 8081
